fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
-/* * {
+* {
   opacity: 1;
-  visibility: visibile;
-}
+  visibility: visibile; }
 
 * {
-  border: 1px solid #f00;
-} */
+  border: 1px solid #f00; }
+
 /*********************
 BREAKPOINTS
 *********************/
